I3: number guessing game complete

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,21 @@
 <html>
-<head></head>
+<head>
+<style>
+  body{
+    background-color: red;
+  }
+</style>
+
+</head>
+
+<form>
+ <input type = "text" name = "guess" />
+ <input type = "submit" value = "Guess!">
+ 
+</form>
 <p>
-"THE SECRET NUMBER IS <%=a%>
-</p>
+  <%= message %>
+  </p>
+
 </body>
 </html>
